# Foreko

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml  pyrightconfig.json  setup.ps1  setup.sh
.github/workflows/: main.yml
app/: Dockerfile  README.md  docker-compose.yml
app/backend/: pyrightconfig.json
app/backend/foreko/: __init__.py  deps.py  main.py  settings.py
app/backend/foreko/jobs/: events.py  sse.py
app/backend/foreko/routers/: _errors.py  anomaly.py  backtest.py  comparison.py  connections.py  covariates.py  datasets.py  diagnostics.py  factors.py  finetune.py  forecast.py  phase2.py  phase4.py  phase6.py  scenarios.py  system.py
app/backend/foreko/schemas/: anomaly.py  comparison.py  connection.py  dataset.py  factors.py  finetune.py  forecast.py
app/backend/foreko/services/: adapter_store.py  anomaly.py  anomaly_methods.py  anomaly_root_cause.py  backtest.py  calibration.py  changepoints.py  comparison.py  connection_store.py  csv_loader.py  dataset_store.py  device.py  diagnostics.py  ensembles.py  exports.py  factors.py  finetune.py  forecaster.py  janitor.py  lightgbm_baseline.py  logging_config.py  model_download.py  model_registry.py  paths.py  runtime.py  scenarios.py  secrets.py  segments.py  series.py  store.py
app/backend/tests/: conftest.py
app/backend/tests/integration/: conftest.py  test_sql_loader_mssql.py  test_sql_loader_mysql.py  test_sql_loader_postgres.py
app/backend/tests/unit/: test_backtest.py  test_connections_router.py  test_csv_loader.py  test_dataset_store.py  test_file_loaders.py  test_forecast_flow.py  test_hardening.py  test_model_progress.py  test_secrets.py  test_sql_loader.py  test_system_endpoints.py  test_upload_router.py
app/backend/timesfm_studio/: __init__.py  main.py  settings.py
app/backend/timesfm_studio/jobs/: generic.py  manager.py
app/backend/timesfm_studio/routers/: __init__.py  adapters.py  anomaly.py  backtest.py  comparison.py  covariates.py  datasets.py  diagnostics.py  factors.py  forecast.py  model.py  phase2.py  phase4.py  phase5.py  phase6.py  system.py
app/backend/timesfm_studio/schemas/: __init__.py  backtest.py  covariates.py  diagnostics.py  jobs.py  system.py
app/backend/timesfm_studio/services/: __init__.py  alerts.py  anomaly.py  backtest.py  calibration.py  classical_baselines.py  comparison.py  connection_store.py  csv_loader.py  dataset_store.py  device.py  diagnostics.py  exports.py  factor_diagnostics.py  factors.py  finetune.py  forecaster.py  llm.py  logging_config.py  model_download.py  nlq.py  preflight.py  runtime.py  scheduler.py  secrets.py  series.py  store.py  transformations.py
app/frontend/: clean_tables.py  index.html  package-lock.json  package.json  playwright.config.ts  replace2.py  replace_buttons.py  replace_tables.py  strip_rounded.py  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
app/frontend/e2e/: foreko.spec.ts  foresee.spec.ts
app/frontend/public/samples/: daily_sales_demo.csv  energy_consumption_demo.csv  monthly_revenue_demo.csv  website_traffic_demo.csv
app/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
app/frontend/src/api/: client.ts  endpoints.ts
app/frontend/src/charts/: theme.ts
app/frontend/src/components/: AlternativeCard.tsx  AnomalyChart.tsx  AnomalyInsights.tsx  AnomalyTable.tsx  CSVUpload.tsx  ColumnMapper.tsx  ComparisonChart.tsx  DataSourceSelector.tsx  DeviceBadge.tsx  FactorComparisonChart.tsx  FactorDetailsTable.tsx  FactorImpactCards.tsx  FactorInfluenceChart.tsx  FeatureImportance.tsx  LoadingSplash.tsx  MetricBadge.tsx  ModelStatusBar.tsx  NextStepsCallout.tsx  SamplesPicker.tsx  Skeleton.tsx  StatusBar.tsx  ThemeToggle.tsx  Tour.tsx  WinnerCard.tsx
app/frontend/src/data/: pageIntros.ts  samples.ts  termDictionary.ts
app/frontend/src/hooks/: useAnomalyOrchestrator.ts  useBacktestOrchestrator.ts  useChartExport.ts  useComparisonOrchestrator.ts  useDiagnosticsOrchestrator.ts  useExplainOrchestrator.ts  useHealth.ts  useJobEvents.ts  usePreflightOrchestrator.ts  useScenariosOrchestrator.ts  useSegmentsOrchestrator.ts  useSyncedDataset.ts
app/frontend/src/pages/: AboutPage.tsx  AnomalyPage.tsx  BacktestPage.tsx  ComparisonPage.tsx  CovariatesPage.tsx  DataPage.tsx  DatasetsPage.tsx  DiagnosticsPage.tsx  ExplainPage.tsx  GlossaryPage.tsx  LandingPage.tsx  NotFoundPage.tsx  OperationsPage.tsx  PreflightPage.tsx  PrivacyPage.tsx  ScenariosPage.tsx  SegmentsPage.tsx  UploadPage.tsx
app/frontend/src/stores/: backtestStore.ts  datasetStore.ts  jobsStore.ts  themeStore.ts
app/frontend/src/styles/: index.css
app/frontend/src/test/: setup.ts
app/frontend/src/types/: anomaly.ts  comparison.ts  connection.ts  covariates.ts  dataset.ts  factors.ts  finetune.ts  forecast.ts  phases.ts  system.ts
app/frontend/src/utils/: exportCsv.ts  loadDemoDataset.ts  toast.ts  version.ts  (+1 more)
scripts/: capture_screenshots.mjs  generate_samples.py
src/timesfm/: __init__.py
(+42 files in other folders)
