[project]
name = "foreko"
version = "0.1.0"
description = "Foreko, a local-first time-series forecasting workbench. TimesFM and LightGBM side by side, free and MIT-licensed."
authors = [
    {name = "Mina Saad", email = "mina.saad.wahba@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "huggingface_hub[cli]>=0.23.0",
    "safetensors>=0.5.3",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
flax = [
    "flax",
    "optax",
    "einshape",
    "orbax-checkpoint",
    "jaxtyping",
    "jax[cuda]"
]
xreg = [
    "jax[cuda]",
    "scikit-learn",
]
app = [
    "torch>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    "pandas>=2.1.0",
    "jax[cpu]>=0.4.23",
    "scikit-learn>=1.3.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "accelerate>=0.29.0",
    "lightgbm>=4.0.0",
    "statsmodels>=0.14.0",
    "pyarrow>=17.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "reportlab>=4.0.0",
]
connectors = [
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.2",
    "pymysql>=1.1",
    "pyodbc>=5.1; sys_platform == 'win32'",
    "pymssql>=2.3; sys_platform != 'win32'",
    "keyring>=25",
]
app-dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
]
# GPU build of torch. Sync with --extra cuda on machines with a modern NVIDIA
# driver (>= 570). Plain `uv sync --extra app` keeps the PyPI default, which
# resolves to the CPU wheel on Windows and the bundled-CUDA wheel on Linux.
# setup.ps1 / setup.sh pick the right extra automatically based on nvidia-smi.
cuda = [
    "torch>=2.7.0",
]

# Pin torch to the PyTorch CUDA 12.8 wheel index, but only when the `cuda`
# extra is active. Without the extra, uv falls back to the default index and
# installs the CPU build. ``explicit = true`` keeps the GPU index from being
# searched during regular resolution.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "cuda" },
]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.pytest.ini_options]
testpaths = ["app/backend/tests", "tests"]
pythonpath = ["app/backend"]
markers = [
    "unit: fast tests that do not load the real TimesFM model",
    "integration: tests that require downloading and loading the real TimesFM model",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["src", "app/backend"]
include = ["timesfm*", "foreko*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
